quick: fix hidden overflow on app side nav

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -125,6 +125,8 @@
 /* Do NOT scroll "Applications:" and "Job Status" */
 .ant-layout-sider-children {
   overflow-y: hidden;
+  display: flex;
+  flex-flow: column;
 }
 
 /* DO scroll app category menu */
